# atmosphere-cli

./: .dockerignore  .env.sample  .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile.test  Jenkinsfile  Pipfile  README.md  README.rst  docker.env.sample  requirements.txt  setup.cfg  tox.ini
atmosphere/: allocation_source.py  identity.py  image.py  instance.py  main.py  project.py  provider.py  size.py  utils.py  version.py  volume.py
atmosphere/api/: __init__.py  constants.py  main.py  request.py
atmosphere/hooks/: delete_hook.py
docs/: Makefile  conf.py  index.rst  requirements.txt
features/: cmdline.help.feature  cmdline.identity.feature  cmdline.images.feature  cmdline.instances.feature  cmdline.projects.feature  cmdline.version.feature  cmdline.volumes.feature  environment.py
tests/: mock_server.py  test_allocation_sources.py  test_identities.py  test_images.py  test_instance.py  test_projects.py  test_providers.py  test_request.py  test_sizes.py  test_version.py  test_volumes.py
tests/responses/: identities.json  identity.json  image.json  image_versions.json  images.json  instance.json  instance_actions.json  instances.json  project.json  project_created.json  projects.json  provider.json  providers.json  size.json  sizes.json  volume.json  volumes.json
