[metadata]
name = atmosphere_cli
summary = A command-line interface for Atmosphere
description-file = README.md
author = Erik Ferlanti
author-email = eferlanti@tacc.utexas.edu
home-page = https://github.com/cyverse/atmosphere-cli
license = LICENSE.txt
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    Topic :: System
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Systems Administration
keywords =
    atmosphere
zip_safe = False

[files]
packages =
    atmosphere

[entry_points]
console_scripts =
    atmo = atmosphere.main:main
atmosphere.cli =
    version = atmosphere.version:Version
    instance_list = atmosphere.instance:InstanceList
    image_list = atmosphere.image:ImageList
    image_show = atmosphere.image:ImageShow
    provider_list = atmosphere.provider:ProviderList
    provider_show = atmosphere.provider:ProviderShow
    identity_list = atmosphere.identity:IdentityList
    identity_show = atmosphere.identity:IdentityShow
distutils.commands =
    behave_test = setuptools_behave:behave_test

[cmdclass]
behave_test = behave_test

[behave_test]
format = progress
tags = -@xfail
args = features

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[wheel]
universal = 1

[flake8]
max-line-length = 160

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --cov atmosphere --cov-report xml --junit-xml pytest.xml
