[metadata]
name = atmosphere_cli
summary = A command-line interface for Atmosphere
description-file = README.md
author = Erik Ferlanti
author-email = eferlanti@tacc.utexas.edu
home-page = https://github.com/cyverse/atmosphere-cli
license = LICENSE.txt
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    Topic :: System
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Systems Administration
keywords =
    atmosphere
zip_safe = False

[files]
packages =
    atmosphere

[entry_points]
console_scripts =
    atmo = atmosphere.main:main
atmosphere.cli =
    version = atmosphere.version:Version
    allocation_source_list = atmosphere.allocation_source:AllocationSourceList
    allocation_source_show = atmosphere.allocation_source:AllocationSourceShow
    instance_actions = atmosphere.instance:InstanceActions
    instance_create = atmosphere.instance:InstanceCreate
    instance_delete = atmosphere.instance:InstanceDelete
    instance_list = atmosphere.instance:InstanceList
    instance_show = atmosphere.instance:InstanceShow
    instance_suspend = atmosphere.instance:InstanceSuspend
    instance_resume = atmosphere.instance:InstanceResume
    instance_reboot = atmosphere.instance:InstanceReboot
    instance_stop = atmosphere.instance:InstanceStop
    instance_start = atmosphere.instance:InstanceStart
    instance_redeploy = atmosphere.instance:InstanceRedeploy
    instance_shelve = atmosphere.instance:InstanceShelve
    instance_unshelve = atmosphere.instance:InstanceUnshelve
    instance_attach = atmosphere.instance:InstanceAttach
    instance_detach = atmosphere.instance:InstanceDetach
    instance_history = atmosphere.instance:InstanceHistory
    image_list = atmosphere.image:ImageList
    image_search = atmosphere.image:ImageSearch
    image_show = atmosphere.image:ImageShow
    image_version_show = atmosphere.image:ImageVersionShow
    project_create = atmosphere.project:ProjectCreate
    project_list = atmosphere.project:ProjectList
    project_show = atmosphere.project:ProjectShow
    provider_list = atmosphere.provider:ProviderList
    provider_show = atmosphere.provider:ProviderShow
    identity_list = atmosphere.identity:IdentityList
    identity_show = atmosphere.identity:IdentityShow
    size_list = atmosphere.size:SizeList
    size_show = atmosphere.size:SizeShow
    volume_create = atmosphere.volume:VolumeCreate
    volume_delete = atmosphere.volume:VolumeDelete
    volume_list = atmosphere.volume:VolumeList
    volume_show = atmosphere.volume:VolumeShow
atmosphere.cli.volume_delete =
    delete_hook = atmosphere.hooks.delete_hook:DeleteHook
atmosphere.cli.instance_delete =
    delete_hook = atmosphere.hooks.delete_hook:DeleteHook
distutils.commands =
    behave_test = setuptools_behave:behave_test

[cmdclass]
behave_test = behave_test

[behave_test]
format = progress
tags = -@xfail
args = features

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[wheel]
universal = 1

[flake8]
max-line-length = 250

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --cov atmosphere --cov-report xml --junit-xml pytest.xml
